// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns styles for body1 1`] = `
"
    font-size: 16px;
    font-weight: 400;
    text-transform: none;
    letter-spacing: 0.5px;
  "
`;

exports[`returns styles for body2 1`] = `
"
    font-size: 14px;
    font-weight: 400;
    text-transform: none;
    letter-spacing: 0.25px;
  "
`;

exports[`returns styles for button 1`] = `
"
    font-size: 14px;
    font-weight: 500;
    text-transform: uppercase;
    letter-spacing: 1.25px;
  "
`;

exports[`returns styles for caption 1`] = `
"
    font-size: 12px;
    font-weight: 400;
    text-transform: none;
    letter-spacing: 0.4px;
  "
`;

exports[`returns styles for headline1 1`] = `
"
    font-size: 96px;
    font-weight: 300;
    text-transform: none;
    letter-spacing: -1.5px;
  "
`;

exports[`returns styles for headline2 1`] = `
"
    font-size: 60px;
    font-weight: 300;
    text-transform: none;
    letter-spacing: -0.5px;
  "
`;

exports[`returns styles for headline3 1`] = `
"
    font-size: 48px;
    font-weight: 400;
    text-transform: none;
    letter-spacing: 0px;
  "
`;

exports[`returns styles for headline4 1`] = `
"
    font-size: 34px;
    font-weight: 400;
    text-transform: none;
    letter-spacing: 0.25px;
  "
`;

exports[`returns styles for headline5 1`] = `
"
    font-size: 24px;
    font-weight: 400;
    text-transform: none;
    letter-spacing: 0px;
  "
`;

exports[`returns styles for headline6 1`] = `
"
    font-size: 20px;
    font-weight: 500;
    text-transform: none;
    letter-spacing: 0.15px;
  "
`;

exports[`returns styles for overline 1`] = `
"
    font-size: 10px;
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 1.5px;
  "
`;

exports[`returns styles for subtitle1 1`] = `
"
    font-size: 16px;
    font-weight: 400;
    text-transform: none;
    letter-spacing: 0.15px;
  "
`;

exports[`returns styles for subtitle2 1`] = `
"
    font-size: 14px;
    font-weight: 500;
    text-transform: none;
    letter-spacing: 0.1px;
  "
`;
